--- a/src/app/Income.form
+++ b/src/app/Income.form
@@ -283,7 +283,7 @@
                                       </Group>
                                       <Component id="jScrollPane1" alignment="0" min="-2" pref="564" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jTextField2" min="-2" pref="151" max="-2" attributes="0"/>
+                                          <Component id="searchField" min="-2" pref="151" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="jButton6" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -348,7 +348,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jButton6" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField2" alignment="3" max="32767" attributes="0"/>
+                              <Component id="searchField" alignment="3" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="805" max="-2" attributes="0"/>
@@ -383,7 +383,8 @@
                     <Component class="javax.swing.JTable" name="jTable1">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="4" rowCount="40">
+                          <Table columnCount="5" rowCount="40">
+                            <Column editable="false" title="ID" type="java.lang.Object"/>
                             <Column editable="false" title="Date" type="java.lang.Object"/>
                             <Column editable="false" title="Category" type="java.lang.Object"/>
                             <Column editable="false" title="Amount" type="java.lang.Object"/>
@@ -392,6 +393,11 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
@@ -568,7 +574,7 @@
                     <Property name="text" type="java.lang.String" value="Rp. 0"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField2">
+                <Component class="javax.swing.JTextField" name="searchField">
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton6">
                   <Properties>
